--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -642,5 +642,262 @@
       "Einfach super!",
       "Sie sind ein Glückspilz!"
     ]
+  },
+  "achievements": {
+    "Новичок": {
+      "name": "Anfänger",
+      "description": "Öffne 10 Kisten"
+    },
+    "Коллекционер": {
+      "name": "Sammler",
+      "description": "Finde 5 seltene Gegenstände"
+    },
+    "Премиум игрок": {
+      "name": "Premium-Spieler",
+      "description": "Finde 3 Gegenstände im Wert von 100+ Rubel"
+    },
+    "Подписчик": {
+      "name": "Abonnent",
+      "description": "Habe 30 Tage in Folge ein aktives Abonnement"
+    },
+    "Покупатель подписки": {
+      "name": "Abonnement-Käufer",
+      "description": "Kaufe eine beliebige Abonnement-Stufe"
+    },
+    "Удачливый": {
+      "name": "Glückspilz",
+      "description": "Öffne 7 Tage in Folge Kisten"
+    },
+    "Миллионер": {
+      "name": "Millionär",
+      "description": "Gesamtwert der Gegenstände im Inventar von 1.000.000 Rubel"
+    },
+    "Эксперт": {
+      "name": "Experte",
+      "description": "Besitze einen Gegenstand im Wert von über 50.000 Rubel"
+    },
+    "Откройте 10 кейсов": {
+      "name": "Anfänger",
+      "description": "Öffne 10 Kisten"
+    },
+    "Найдите 5 редких предметов": {
+      "name": "Sammler",
+      "description": "Finde 5 seltene Gegenstände"
+    },
+    "Найдите 3 предмета стоимостью от 100 руб": {
+      "name": "Premium-Spieler",
+      "description": "Finde 3 Gegenstände im Wert von 100+ Rubel"
+    },
+    "Иметь активную подписку 30 дней подряд": {
+      "name": "Abonnent",
+      "description": "Habe 30 Tage in Folge ein aktives Abonnement"
+    },
+    "Приобрести любой уровень подписки": {
+      "name": "Abonnement-Käufer",
+      "description": "Kaufe eine beliebige Abonnement-Stufe"
+    },
+    "Открыть кейс 7 дней подряд": {
+      "name": "Glückspilz",
+      "description": "Öffne 7 Tage in Folge Kisten"
+    },
+    "Общая стоимость предметов в инвентаре 1,000,000 руб": {
+      "name": "Millionär",
+      "description": "Gesamtwert der Gegenstände im Inventar von 1.000.000 Rubel"
+    },
+    "Иметь предмет с ценой выше 50,000 руб": {
+      "name": "Experte",
+      "description": "Besitze einen Gegenstand im Wert von über 50.000 Rubel"
+    }
+  },
+  "modals": {
+    "account_linking_error": "Beim Verknüpfen des Kontos ist ein Fehler aufgetreten.",
+    "achievements_bonus": "Erfolge:",
+    "achievements_collapse_hint": "Zum Einklappen klicken",
+    "achievements_count": "Erfolge",
+    "achievements_expand_hint": "Für Details klicken",
+    "achievements_not_loaded": "Erfolge nicht geladen",
+    "acquired_date": "Erhalten",
+    "active": "Aktiv",
+    "balance_top_up": "Guthaben aufladen",
+    "best_weapon": "Beste Waffe",
+    "buy_subscription": "Abonnement kaufen",
+    "cannot_withdraw": "Kann nicht abheben",
+    "cards_supported": "Unterstützte Karten",
+    "case": "KISTE",
+    "case_label": "KISTE",
+    "case_opening_error": "Fehler beim Öffnen der Kiste",
+    "case_per_day": "Kisten pro Tag",
+    "case_template_not_found": "Kisten-Vorlage nicht gefunden",
+    "cases_suffix": "Kisten",
+    "classified": "Klassifiziert",
+    "click_to_connect": "Zum Verbinden klicken",
+    "click_to_send_code": "Zum Senden des Codes klicken",
+    "code_sent": "Code gesendet",
+    "code_valid_time": "Code gültig für",
+    "completing_achievements": "Erfolge abschließen",
+    "confirm_password_placeholder": "Passwort bestätigen",
+    "connect_steam": "Steam verbinden",
+    "connect_steam_first": "Steam zuerst verbinden",
+    "consumer": "Verbrauchergrad",
+    "contraband": "Schmuggelware",
+    "covert": "Verdeckt",
+    "creating_payment": "Zahlung wird erstellt",
+    "daily_login": "Tägliche Anmeldung",
+    "day_30": "30 Tage",
+    "deposit_info": "Einzahlungsinfo",
+    "drop_bonus": "Drop-Bonus",
+    "drop_bonus_text": "Drop",
+    "drop_bonuses": "Drop-Boni",
+    "email_verification_label": "E-Mail-Verifizierung",
+    "email_verification_modal": "E-Mail-Verifizierung",
+    "email_verified": "E-Mail verifiziert",
+    "email_verified_success": "E-Mail erfolgreich verifiziert",
+    "email_verify_error": "E-Mail-Verifizierungsfehler",
+    "enter_amount": "Betrag eingeben",
+    "enter_code": "Code eingeben",
+    "enter_correct_amount": "Korrekten Betrag eingeben",
+    "error_no_item_name": "Fehler: Kein Artikelname",
+    "error_no_subscription": "Fehler: Kein Abonnement",
+    "error_not_found": "Fehler: Nicht gefunden",
+    "error_withdrawal_failed": "Fehler: Abhebung fehlgeschlagen",
+    "error_withdrawal_impossible": "Fehler: Abhebung unmöglich",
+    "event_participation": "Veranstaltungsteilnahme",
+    "example": "Beispiel",
+    "fetch_trade_url_auto": "Trade-URL automatisch abrufen",
+    "fetching_trade_url": "Trade-URL wird abgerufen",
+    "friend_invites": "Freunde einladen",
+    "going_to_subscription_payment": "Zur Abonnement-Zahlung gehen",
+    "industrial": "Industriegrad",
+    "invalid_username": "Ungültiger Benutzername",
+    "inventory_descriptions": "Inventarbeschreibungen",
+    "inventory_empty": "Inventar leer",
+    "inventory_tabs": "Inventar-Tabs",
+    "inventory_title": "Inventar",
+    "item_info_error": "Artikel-Info-Fehler",
+    "item_withdraw": "Artikel abheben",
+    "item_withdraw_success": "Artikel erfolgreich abgehoben",
+    "items_in_inventory": "Artikel im Inventar",
+    "items_suffix": "Artikel",
+    "level_bonus": "Level-Bonus",
+    "level_bonus_tooltip": "Level-Bonus-Tooltip",
+    "level_drop_bonus": "Level-Drop-Bonus",
+    "level_max": "100",
+    "level_progress": "Level-Fortschritt",
+    "level_text": "Level",
+    "linking_process_error": "Fehler beim Verknüpfungsvorgang. Bitte versuchen Sie es erneut.",
+    "loading_no": "Nein",
+    "loading_yes": "Ja",
+    "milspec": "Mil-Spec-Grad",
+    "minimum_amount": "Mindestbetrag",
+    "minimum_deposit_info": "Mindesteinzahlungsinfo",
+    "name": "Name",
+    "need_bonus_game_win": "Bonus-Spiel-Sieg benötigt",
+    "need_trade_url": "Trade-URL benötigt",
+    "new_password": "Neues Passwort",
+    "new_password_placeholder": "Neues Passwort",
+    "no_description": "Keine Beschreibung",
+    "no_duplicates": "Keine Duplikate",
+    "no_items_for_exchange": "Keine Artikel zum Tauschen",
+    "no_opened_cases": "Keine geöffneten Kisten",
+    "no_sold_items": "Keine verkauften Artikel",
+    "no_subscription": "Kein Abonnement",
+    "no_withdrawn_items": "Keine abgehobenen Artikel",
+    "ok": "OK",
+    "open_button": "Öffnen",
+    "open_cases_hint": "Kisten öffnen Hinweis",
+    "opened": "Geöffnet",
+    "opened_cases": "Geöffnete Kisten",
+    "opened_cases_hint": "Geöffnete Kisten Hinweis",
+    "opening_cases": "Kisten werden geöffnet",
+    "or_enter_custom": "Oder benutzerdefinierten eingeben",
+    "password_min_8_chars": "Passwort mindestens 8 Zeichen",
+    "password_need_digit": "Passwort benötigt Ziffer",
+    "password_need_lowercase": "Passwort benötigt Kleinbuchstaben",
+    "password_need_special": "Passwort benötigt Sonderzeichen",
+    "password_need_uppercase": "Passwort benötigt Großbuchstaben",
+    "password_requirements": "Passwort-Anforderungen",
+    "payment_error": "Zahlungsfehler",
+    "profile_settings_title": "Profil-Einstellungen",
+    "provide_trade_url": "Trade-URL angeben",
+    "purchase": "Kaufen",
+    "purchase_button": "Kaufen",
+    "resend": "Erneut senden",
+    "resending": "Wird erneut gesendet",
+    "restricted": "Eingeschränkt",
+    "saving": "Speichern",
+    "select_subscription": "Abonnement auswählen",
+    "send_code": "Code senden",
+    "send_code_to": "Code senden an",
+    "send_to_steam": "An Steam senden",
+    "sending_code": "Code wird gesendet",
+    "session_expired": "Sitzung abgelaufen",
+    "settings_save_error": "Einstellungen-Speicher-Fehler",
+    "settings_saved": "Einstellungen gespeichert",
+    "shop": "Shop",
+    "shop_purchases": "Shop-Käufe",
+    "sold": "Verkauft",
+    "sold_items_hint": "Verkaufte Artikel Hinweis",
+    "source": "Quelle",
+    "sources": "Quellen",
+    "status_bonus": "Status:",
+    "status_keyword": "Status",
+    "status_opened": "Status: Geöffnet",
+    "status_pending_withdrawal": "Status: Abhebung ausstehend",
+    "status_plus_keyword": "Status+",
+    "status_plus_plus_keyword": "Status++",
+    "status_purchased": "Status: Gekauft",
+    "status_sold": "Status: Verkauft",
+    "status_tier_1": "Status Stufe 1",
+    "status_tier_2": "Status Stufe 2",
+    "status_tier_3": "Status Stufe 3",
+    "status_withdrawn": "Status: Abgehoben",
+    "steam_already_linked": "Dieses Steam-Konto ist bereits mit einem anderen Benutzer verknüpft.",
+    "steam_connected": "Steam verbunden",
+    "steam_link_error": "Fehler beim Verknüpfen des Steam-Kontos",
+    "steam_link_try_again": "Verknüpfung des Steam-Kontos fehlgeschlagen. Bitte versuchen Sie es erneut.",
+    "steam_linked_success": "Steam erfolgreich verknüpft",
+    "steam_not_connected": "Steam nicht verbunden",
+    "steam_not_connected_error": "Steam nicht verbunden Fehler",
+    "steam_profile_label": "Steam-Profil",
+    "steam_trade_url": "Steam Trade-URL",
+    "step1": "Schritt 1",
+    "step2": "Schritt 2",
+    "step3": "Schritt 3",
+    "step4": "Schritt 4",
+    "streak_suffix": "Streak",
+    "subscription_description": "Abonnement-Beschreibung",
+    "subscription_error": "Abonnement-Fehler",
+    "subscription_status_days": "Abonnement-Status Tage",
+    "subscription_tier_1": "Abonnement Stufe 1",
+    "subscription_tier_2": "Abonnement Stufe 2",
+    "subscription_tier_3": "Abonnement Stufe 3",
+    "subscription_tier_default": "Standard-Abonnement",
+    "subscriptions": "Abonnements",
+    "top_up_for": "Aufladen für",
+    "total_bonus": "Gesamtbonus:",
+    "total_count": "Gesamt",
+    "trade_url_fetch_error": "Trade-URL-Abruf-Fehler",
+    "trade_url_fetch_network_error": "Trade-URL-Abruf-Netzwerk-Fehler",
+    "trade_url_fetched": "Trade-URL abgerufen",
+    "trade_url_label": "Trade-URL",
+    "trade_url_locked": "Trade-URL gesperrt",
+    "trade_url_manual_instructions": "Trade-URL manuelle Anweisungen",
+    "trade_url_placeholder": "Trade-URL-Platzhalter",
+    "trade_url_required": "Trade-URL erforderlich",
+    "trade_url_set": "Trade-URL festgelegt",
+    "trade_url_tooltip": "Trade-URL-Tooltip",
+    "unknown_achievement": "Unbekannter Erfolg",
+    "user_not_found": "Benutzer nicht gefunden",
+    "username_description": "Benutzername-Beschreibung",
+    "verification_code_error": "Verifizierungscode-Fehler",
+    "verification_code_sent": "Verifizierungscode gesendet",
+    "verify": "Verifizieren",
+    "verify_email_button": "E-Mail verifizieren",
+    "verifying": "Verifizierung",
+    "withdraw_to_steam": "Zu Steam abheben",
+    "withdrawing": "Abhebung",
+    "withdrawn": "Abgehoben",
+    "withdrawn_items_hint": "Abgehobene Artikel Hinweis",
+    "xp_earned_for": "XP verdient für"
   }
 }
