--- a/src/i18n/locales/es.json
+++ b/src/i18n/locales/es.json
@@ -638,5 +638,262 @@
       "¡Simplemente genial!",
       "¡Eres un afortunado!"
     ]
+  },
+  "achievements": {
+    "Новичок": {
+      "name": "Novato",
+      "description": "Abre 10 cajas"
+    },
+    "Коллекционер": {
+      "name": "Coleccionista",
+      "description": "Encuentra 5 objetos raros"
+    },
+    "Премиум игрок": {
+      "name": "Jugador Premium",
+      "description": "Encuentra 3 objetos valorados en 100+ rublos"
+    },
+    "Подписчик": {
+      "name": "Suscriptor",
+      "description": "Ten una suscripción activa durante 30 días seguidos"
+    },
+    "Покупатель подписки": {
+      "name": "Comprador de Suscripción",
+      "description": "Compra cualquier nivel de suscripción"
+    },
+    "Удачливый": {
+      "name": "Afortunado",
+      "description": "Abre cajas durante 7 días seguidos"
+    },
+    "Миллионер": {
+      "name": "Millonario",
+      "description": "Valor total de objetos en el inventario de 1,000,000 rublos"
+    },
+    "Эксперт": {
+      "name": "Experto",
+      "description": "Ten un objeto valorado en más de 50,000 rublos"
+    },
+    "Откройте 10 кейсов": {
+      "name": "Novato",
+      "description": "Abre 10 cajas"
+    },
+    "Найдите 5 редких предметов": {
+      "name": "Coleccionista",
+      "description": "Encuentra 5 objetos raros"
+    },
+    "Найдите 3 предмета стоимостью от 100 руб": {
+      "name": "Jugador Premium",
+      "description": "Encuentra 3 objetos valorados en 100+ rublos"
+    },
+    "Иметь активную подписку 30 дней подряд": {
+      "name": "Suscriptor",
+      "description": "Ten una suscripción activa durante 30 días seguidos"
+    },
+    "Приобрести любой уровень подписки": {
+      "name": "Comprador de Suscripción",
+      "description": "Compra cualquier nivel de suscripción"
+    },
+    "Открыть кейс 7 дней подряд": {
+      "name": "Afortunado",
+      "description": "Abre cajas durante 7 días seguidos"
+    },
+    "Общая стоимость предметов в инвентаре 1,000,000 руб": {
+      "name": "Millonario",
+      "description": "Valor total de objetos en el inventario de 1,000,000 rublos"
+    },
+    "Иметь предмет с ценой выше 50,000 руб": {
+      "name": "Experto",
+      "description": "Ten un objeto valorado en más de 50,000 rublos"
+    }
+  },
+  "modals": {
+    "account_linking_error": "Se produjo un error al vincular la cuenta.",
+    "achievements_bonus": "Logros:",
+    "achievements_collapse_hint": "Haz clic para contraer",
+    "achievements_count": "Logros",
+    "achievements_expand_hint": "Haz clic para ver detalles",
+    "achievements_not_loaded": "Logros no cargados",
+    "acquired_date": "Obtenido",
+    "active": "Activo",
+    "balance_top_up": "Recargar saldo",
+    "best_weapon": "Mejor arma",
+    "buy_subscription": "Comprar suscripción",
+    "cannot_withdraw": "No se puede retirar",
+    "cards_supported": "Tarjetas compatibles",
+    "case": "CAJA",
+    "case_label": "CAJA",
+    "case_opening_error": "Error al abrir la caja",
+    "case_per_day": "Cajas por día",
+    "case_template_not_found": "Plantilla de caja no encontrada",
+    "cases_suffix": "cajas",
+    "classified": "Clasificado",
+    "click_to_connect": "Haz clic para conectar",
+    "click_to_send_code": "Haz clic para enviar código",
+    "code_sent": "Código enviado",
+    "code_valid_time": "Código válido por",
+    "completing_achievements": "Completando logros",
+    "confirm_password_placeholder": "Confirmar contraseña",
+    "connect_steam": "Conectar Steam",
+    "connect_steam_first": "Conectar Steam primero",
+    "consumer": "Grado de Consumidor",
+    "contraband": "Contrabando",
+    "covert": "Encubierto",
+    "creating_payment": "Creando pago",
+    "daily_login": "Inicio de sesión diario",
+    "day_30": "30 días",
+    "deposit_info": "Información de depósito",
+    "drop_bonus": "Bonificación de drop",
+    "drop_bonus_text": "Drop",
+    "drop_bonuses": "Bonificaciones de drop",
+    "email_verification_label": "Verificación de email",
+    "email_verification_modal": "Verificación de email",
+    "email_verified": "Email verificado",
+    "email_verified_success": "Email verificado con éxito",
+    "email_verify_error": "Error de verificación de email",
+    "enter_amount": "Ingresa cantidad",
+    "enter_code": "Ingresa código",
+    "enter_correct_amount": "Ingresa cantidad correcta",
+    "error_no_item_name": "Error: Sin nombre de objeto",
+    "error_no_subscription": "Error: Sin suscripción",
+    "error_not_found": "Error: No encontrado",
+    "error_withdrawal_failed": "Error: Retiro fallido",
+    "error_withdrawal_impossible": "Error: Retiro imposible",
+    "event_participation": "Participación en evento",
+    "example": "Ejemplo",
+    "fetch_trade_url_auto": "Obtener URL de intercambio automáticamente",
+    "fetching_trade_url": "Obteniendo URL de intercambio",
+    "friend_invites": "Invitaciones de amigos",
+    "going_to_subscription_payment": "Ir al pago de suscripción",
+    "industrial": "Grado Industrial",
+    "invalid_username": "Nombre de usuario inválido",
+    "inventory_descriptions": "Descripciones del inventario",
+    "inventory_empty": "Inventario vacío",
+    "inventory_tabs": "Pestañas del inventario",
+    "inventory_title": "Inventario",
+    "item_info_error": "Error de información del objeto",
+    "item_withdraw": "Retirar objeto",
+    "item_withdraw_success": "Objeto retirado con éxito",
+    "items_in_inventory": "Objetos en el inventario",
+    "items_suffix": "objetos",
+    "level_bonus": "Bonificación de nivel",
+    "level_bonus_tooltip": "Tooltip de bonificación de nivel",
+    "level_drop_bonus": "Bonificación de drop de nivel",
+    "level_max": "100",
+    "level_progress": "Progreso de nivel",
+    "level_text": "Nivel",
+    "linking_process_error": "Error en el proceso de vinculación. Por favor, inténtalo de nuevo.",
+    "loading_no": "No",
+    "loading_yes": "Sí",
+    "milspec": "Grado Mil-Spec",
+    "minimum_amount": "Cantidad mínima",
+    "minimum_deposit_info": "Información de depósito mínimo",
+    "name": "Nombre",
+    "need_bonus_game_win": "Necesita ganar juego de bonificación",
+    "need_trade_url": "Necesita URL de intercambio",
+    "new_password": "Nueva contraseña",
+    "new_password_placeholder": "Nueva contraseña",
+    "no_description": "Sin descripción",
+    "no_duplicates": "Sin duplicados",
+    "no_items_for_exchange": "Sin objetos para intercambio",
+    "no_opened_cases": "Sin cajas abiertas",
+    "no_sold_items": "Sin objetos vendidos",
+    "no_subscription": "Sin suscripción",
+    "no_withdrawn_items": "Sin objetos retirados",
+    "ok": "OK",
+    "open_button": "Abrir",
+    "open_cases_hint": "Consejo para abrir cajas",
+    "opened": "Abierto",
+    "opened_cases": "Cajas abiertas",
+    "opened_cases_hint": "Consejo de cajas abiertas",
+    "opening_cases": "Abriendo cajas",
+    "or_enter_custom": "O ingresa personalizado",
+    "password_min_8_chars": "Contraseña mínimo 8 caracteres",
+    "password_need_digit": "Contraseña necesita dígito",
+    "password_need_lowercase": "Contraseña necesita minúscula",
+    "password_need_special": "Contraseña necesita carácter especial",
+    "password_need_uppercase": "Contraseña necesita mayúscula",
+    "password_requirements": "Requisitos de contraseña",
+    "payment_error": "Error de pago",
+    "profile_settings_title": "Configuración del perfil",
+    "provide_trade_url": "Proporcionar URL de intercambio",
+    "purchase": "Comprar",
+    "purchase_button": "Comprar",
+    "resend": "Reenviar",
+    "resending": "Reenviando",
+    "restricted": "Restringido",
+    "saving": "Guardando",
+    "select_subscription": "Seleccionar suscripción",
+    "send_code": "Enviar código",
+    "send_code_to": "Enviar código a",
+    "send_to_steam": "Enviar a Steam",
+    "sending_code": "Enviando código",
+    "session_expired": "Sesión expirada",
+    "settings_save_error": "Error al guardar configuración",
+    "settings_saved": "Configuración guardada",
+    "shop": "Tienda",
+    "shop_purchases": "Compras de la tienda",
+    "sold": "Vendido",
+    "sold_items_hint": "Consejo de objetos vendidos",
+    "source": "Fuente",
+    "sources": "Fuentes",
+    "status_bonus": "Estado:",
+    "status_keyword": "Estado",
+    "status_opened": "Estado: Abierto",
+    "status_pending_withdrawal": "Estado: Retiro pendiente",
+    "status_plus_keyword": "Estado+",
+    "status_plus_plus_keyword": "Estado++",
+    "status_purchased": "Estado: Comprado",
+    "status_sold": "Estado: Vendido",
+    "status_tier_1": "Estado Nivel 1",
+    "status_tier_2": "Estado Nivel 2",
+    "status_tier_3": "Estado Nivel 3",
+    "status_withdrawn": "Estado: Retirado",
+    "steam_already_linked": "Esta cuenta de Steam ya está vinculada a otro usuario.",
+    "steam_connected": "Steam conectado",
+    "steam_link_error": "Error al vincular cuenta de Steam",
+    "steam_link_try_again": "Falló la vinculación de la cuenta de Steam. Por favor, inténtalo de nuevo.",
+    "steam_linked_success": "Steam vinculado con éxito",
+    "steam_not_connected": "Steam no conectado",
+    "steam_not_connected_error": "Error de Steam no conectado",
+    "steam_profile_label": "Perfil de Steam",
+    "steam_trade_url": "URL de intercambio de Steam",
+    "step1": "Paso 1",
+    "step2": "Paso 2",
+    "step3": "Paso 3",
+    "step4": "Paso 4",
+    "streak_suffix": "racha",
+    "subscription_description": "Descripción de suscripción",
+    "subscription_error": "Error de suscripción",
+    "subscription_status_days": "Días de estado de suscripción",
+    "subscription_tier_1": "Suscripción Nivel 1",
+    "subscription_tier_2": "Suscripción Nivel 2",
+    "subscription_tier_3": "Suscripción Nivel 3",
+    "subscription_tier_default": "Suscripción predeterminada",
+    "subscriptions": "Suscripciones",
+    "top_up_for": "Recargar por",
+    "total_bonus": "Bonificación total:",
+    "total_count": "Total",
+    "trade_url_fetch_error": "Error al obtener URL de intercambio",
+    "trade_url_fetch_network_error": "Error de red al obtener URL de intercambio",
+    "trade_url_fetched": "URL de intercambio obtenida",
+    "trade_url_label": "URL de intercambio",
+    "trade_url_locked": "URL de intercambio bloqueada",
+    "trade_url_manual_instructions": "Instrucciones manuales de URL de intercambio",
+    "trade_url_placeholder": "Marcador de posición de URL de intercambio",
+    "trade_url_required": "URL de intercambio requerida",
+    "trade_url_set": "URL de intercambio establecida",
+    "trade_url_tooltip": "Tooltip de URL de intercambio",
+    "unknown_achievement": "Logro desconocido",
+    "user_not_found": "Usuario no encontrado",
+    "username_description": "Descripción del nombre de usuario",
+    "verification_code_error": "Error de código de verificación",
+    "verification_code_sent": "Código de verificación enviado",
+    "verify": "Verificar",
+    "verify_email_button": "Verificar email",
+    "verifying": "Verificando",
+    "withdraw_to_steam": "Retirar a Steam",
+    "withdrawing": "Retirando",
+    "withdrawn": "Retirado",
+    "withdrawn_items_hint": "Consejo de objetos retirados",
+    "xp_earned_for": "XP ganado por"
   }
 }
