--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -638,5 +638,262 @@
       "Tout simplement super !",
       "Vous êtes un veinard !"
     ]
+  },
+  "achievements": {
+    "Новичок": {
+      "name": "Débutant",
+      "description": "Ouvrir 10 caisses"
+    },
+    "Коллекционер": {
+      "name": "Collectionneur",
+      "description": "Trouver 5 objets rares"
+    },
+    "Премиум игрок": {
+      "name": "Joueur Premium",
+      "description": "Trouver 3 objets d'une valeur de 100+ roubles"
+    },
+    "Подписчик": {
+      "name": "Abonné",
+      "description": "Avoir un abonnement actif pendant 30 jours consécutifs"
+    },
+    "Покупатель подписки": {
+      "name": "Acheteur d'Abonnement",
+      "description": "Acheter n'importe quel niveau d'abonnement"
+    },
+    "Удачливый": {
+      "name": "Chanceux",
+      "description": "Ouvrir des caisses pendant 7 jours consécutifs"
+    },
+    "Миллионер": {
+      "name": "Millionnaire",
+      "description": "Valeur totale des objets dans l'inventaire de 1 000 000 roubles"
+    },
+    "Эксперт": {
+      "name": "Expert",
+      "description": "Avoir un objet d'une valeur supérieure à 50 000 roubles"
+    },
+    "Откройте 10 кейсов": {
+      "name": "Débutant",
+      "description": "Ouvrir 10 caisses"
+    },
+    "Найдите 5 редких предметов": {
+      "name": "Collectionneur",
+      "description": "Trouver 5 objets rares"
+    },
+    "Найдите 3 предмета стоимостью от 100 руб": {
+      "name": "Joueur Premium",
+      "description": "Trouver 3 objets d'une valeur de 100+ roubles"
+    },
+    "Иметь активную подписку 30 дней подряд": {
+      "name": "Abonné",
+      "description": "Avoir un abonnement actif pendant 30 jours consécutifs"
+    },
+    "Приобрести любой уровень подписки": {
+      "name": "Acheteur d'Abonnement",
+      "description": "Acheter n'importe quel niveau d'abonnement"
+    },
+    "Открыть кейс 7 дней подряд": {
+      "name": "Chanceux",
+      "description": "Ouvrir des caisses pendant 7 jours consécutifs"
+    },
+    "Общая стоимость предметов в инвентаре 1,000,000 руб": {
+      "name": "Millionnaire",
+      "description": "Valeur totale des objets dans l'inventaire de 1 000 000 roubles"
+    },
+    "Иметь предмет с ценой выше 50,000 руб": {
+      "name": "Expert",
+      "description": "Avoir un objet d'une valeur supérieure à 50 000 roubles"
+    }
+  },
+  "modals": {
+    "account_linking_error": "Une erreur s'est produite lors de la liaison du compte.",
+    "achievements_bonus": "Succès:",
+    "achievements_collapse_hint": "Cliquer pour réduire",
+    "achievements_count": "Succès",
+    "achievements_expand_hint": "Cliquer pour les détails",
+    "achievements_not_loaded": "Succès non chargés",
+    "acquired_date": "Obtenu",
+    "active": "Actif",
+    "balance_top_up": "Recharger le solde",
+    "best_weapon": "Meilleure arme",
+    "buy_subscription": "Acheter un abonnement",
+    "cannot_withdraw": "Impossible de retirer",
+    "cards_supported": "Cartes supportées",
+    "case": "CAISSE",
+    "case_label": "CAISSE",
+    "case_opening_error": "Erreur lors de l'ouverture de la caisse",
+    "case_per_day": "Caisses par jour",
+    "case_template_not_found": "Modèle de caisse non trouvé",
+    "cases_suffix": "caisses",
+    "classified": "Classifié",
+    "click_to_connect": "Cliquer pour se connecter",
+    "click_to_send_code": "Cliquer pour envoyer le code",
+    "code_sent": "Code envoyé",
+    "code_valid_time": "Code valide pendant",
+    "completing_achievements": "Compléter les succès",
+    "confirm_password_placeholder": "Confirmer le mot de passe",
+    "connect_steam": "Connecter Steam",
+    "connect_steam_first": "Connecter Steam d'abord",
+    "consumer": "Grade Consommateur",
+    "contraband": "Contrebande",
+    "covert": "Furtif",
+    "creating_payment": "Création du paiement",
+    "daily_login": "Connexion quotidienne",
+    "day_30": "30 jours",
+    "deposit_info": "Informations de dépôt",
+    "drop_bonus": "Bonus de drop",
+    "drop_bonus_text": "Drop",
+    "drop_bonuses": "Bonus de drop",
+    "email_verification_label": "Vérification email",
+    "email_verification_modal": "Vérification email",
+    "email_verified": "Email vérifié",
+    "email_verified_success": "Email vérifié avec succès",
+    "email_verify_error": "Erreur de vérification email",
+    "enter_amount": "Entrer le montant",
+    "enter_code": "Entrer le code",
+    "enter_correct_amount": "Entrer le montant correct",
+    "error_no_item_name": "Erreur: Pas de nom d'objet",
+    "error_no_subscription": "Erreur: Pas d'abonnement",
+    "error_not_found": "Erreur: Non trouvé",
+    "error_withdrawal_failed": "Erreur: Retrait échoué",
+    "error_withdrawal_impossible": "Erreur: Retrait impossible",
+    "event_participation": "Participation à l'événement",
+    "example": "Exemple",
+    "fetch_trade_url_auto": "Récupérer l'URL d'échange automatiquement",
+    "fetching_trade_url": "Récupération de l'URL d'échange",
+    "friend_invites": "Invitations d'amis",
+    "going_to_subscription_payment": "Aller au paiement d'abonnement",
+    "industrial": "Grade Industriel",
+    "invalid_username": "Nom d'utilisateur invalide",
+    "inventory_descriptions": "Descriptions d'inventaire",
+    "inventory_empty": "Inventaire vide",
+    "inventory_tabs": "Onglets d'inventaire",
+    "inventory_title": "Inventaire",
+    "item_info_error": "Erreur d'information d'objet",
+    "item_withdraw": "Retirer l'objet",
+    "item_withdraw_success": "Objet retiré avec succès",
+    "items_in_inventory": "Objets dans l'inventaire",
+    "items_suffix": "objets",
+    "level_bonus": "Bonus de niveau",
+    "level_bonus_tooltip": "Infobulle de bonus de niveau",
+    "level_drop_bonus": "Bonus de drop de niveau",
+    "level_max": "100",
+    "level_progress": "Progression de niveau",
+    "level_text": "Niveau",
+    "linking_process_error": "Erreur du processus de liaison. Veuillez réessayer.",
+    "loading_no": "Non",
+    "loading_yes": "Oui",
+    "milspec": "Grade Mil-Spec",
+    "minimum_amount": "Montant minimum",
+    "minimum_deposit_info": "Informations de dépôt minimum",
+    "name": "Nom",
+    "need_bonus_game_win": "Besoin de gagner un jeu bonus",
+    "need_trade_url": "URL d'échange nécessaire",
+    "new_password": "Nouveau mot de passe",
+    "new_password_placeholder": "Nouveau mot de passe",
+    "no_description": "Pas de description",
+    "no_duplicates": "Pas de doublons",
+    "no_items_for_exchange": "Pas d'objets pour l'échange",
+    "no_opened_cases": "Pas de caisses ouvertes",
+    "no_sold_items": "Pas d'objets vendus",
+    "no_subscription": "Pas d'abonnement",
+    "no_withdrawn_items": "Pas d'objets retirés",
+    "ok": "OK",
+    "open_button": "Ouvrir",
+    "open_cases_hint": "Conseil pour ouvrir les caisses",
+    "opened": "Ouvert",
+    "opened_cases": "Caisses ouvertes",
+    "opened_cases_hint": "Conseil des caisses ouvertes",
+    "opening_cases": "Ouverture des caisses",
+    "or_enter_custom": "Ou entrer personnalisé",
+    "password_min_8_chars": "Mot de passe minimum 8 caractères",
+    "password_need_digit": "Mot de passe nécessite un chiffre",
+    "password_need_lowercase": "Mot de passe nécessite une minuscule",
+    "password_need_special": "Mot de passe nécessite un caractère spécial",
+    "password_need_uppercase": "Mot de passe nécessite une majuscule",
+    "password_requirements": "Exigences du mot de passe",
+    "payment_error": "Erreur de paiement",
+    "profile_settings_title": "Paramètres du profil",
+    "provide_trade_url": "Fournir l'URL d'échange",
+    "purchase": "Acheter",
+    "purchase_button": "Acheter",
+    "resend": "Renvoyer",
+    "resending": "Renvoi en cours",
+    "restricted": "Restreint",
+    "saving": "Sauvegarde",
+    "select_subscription": "Sélectionner un abonnement",
+    "send_code": "Envoyer le code",
+    "send_code_to": "Envoyer le code à",
+    "send_to_steam": "Envoyer à Steam",
+    "sending_code": "Envoi du code",
+    "session_expired": "Session expirée",
+    "settings_save_error": "Erreur de sauvegarde des paramètres",
+    "settings_saved": "Paramètres sauvegardés",
+    "shop": "Boutique",
+    "shop_purchases": "Achats de la boutique",
+    "sold": "Vendu",
+    "sold_items_hint": "Conseil des objets vendus",
+    "source": "Source",
+    "sources": "Sources",
+    "status_bonus": "Statut:",
+    "status_keyword": "Statut",
+    "status_opened": "Statut: Ouvert",
+    "status_pending_withdrawal": "Statut: Retrait en attente",
+    "status_plus_keyword": "Statut+",
+    "status_plus_plus_keyword": "Statut++",
+    "status_purchased": "Statut: Acheté",
+    "status_sold": "Statut: Vendu",
+    "status_tier_1": "Statut Niveau 1",
+    "status_tier_2": "Statut Niveau 2",
+    "status_tier_3": "Statut Niveau 3",
+    "status_withdrawn": "Statut: Retiré",
+    "steam_already_linked": "Ce compte Steam est déjà lié à un autre utilisateur.",
+    "steam_connected": "Steam connecté",
+    "steam_link_error": "Erreur de liaison du compte Steam",
+    "steam_link_try_again": "Échec de la liaison du compte Steam. Veuillez réessayer.",
+    "steam_linked_success": "Steam lié avec succès",
+    "steam_not_connected": "Steam non connecté",
+    "steam_not_connected_error": "Erreur Steam non connecté",
+    "steam_profile_label": "Profil Steam",
+    "steam_trade_url": "URL d'échange Steam",
+    "step1": "Étape 1",
+    "step2": "Étape 2",
+    "step3": "Étape 3",
+    "step4": "Étape 4",
+    "streak_suffix": "série",
+    "subscription_description": "Description de l'abonnement",
+    "subscription_error": "Erreur d'abonnement",
+    "subscription_status_days": "Jours de statut d'abonnement",
+    "subscription_tier_1": "Abonnement Niveau 1",
+    "subscription_tier_2": "Abonnement Niveau 2",
+    "subscription_tier_3": "Abonnement Niveau 3",
+    "subscription_tier_default": "Abonnement par défaut",
+    "subscriptions": "Abonnements",
+    "top_up_for": "Recharger pour",
+    "total_bonus": "Bonus total:",
+    "total_count": "Total",
+    "trade_url_fetch_error": "Erreur de récupération de l'URL d'échange",
+    "trade_url_fetch_network_error": "Erreur réseau de récupération de l'URL d'échange",
+    "trade_url_fetched": "URL d'échange récupérée",
+    "trade_url_label": "URL d'échange",
+    "trade_url_locked": "URL d'échange verrouillée",
+    "trade_url_manual_instructions": "Instructions manuelles de l'URL d'échange",
+    "trade_url_placeholder": "Espace réservé de l'URL d'échange",
+    "trade_url_required": "URL d'échange requise",
+    "trade_url_set": "URL d'échange définie",
+    "trade_url_tooltip": "Infobulle de l'URL d'échange",
+    "unknown_achievement": "Succès inconnu",
+    "user_not_found": "Utilisateur non trouvé",
+    "username_description": "Description du nom d'utilisateur",
+    "verification_code_error": "Erreur de code de vérification",
+    "verification_code_sent": "Code de vérification envoyé",
+    "verify": "Vérifier",
+    "verify_email_button": "Vérifier l'email",
+    "verifying": "Vérification",
+    "withdraw_to_steam": "Retirer vers Steam",
+    "withdrawing": "Retrait en cours",
+    "withdrawn": "Retiré",
+    "withdrawn_items_hint": "Conseil des objets retirés",
+    "xp_earned_for": "XP gagné pour"
   }
 }
