--- a/src/i18n/locales/ko.json
+++ b/src/i18n/locales/ko.json
@@ -642,5 +642,262 @@
       "정말 대단해요!",
       "당신은 행운아예요!"
     ]
+  },
+  "achievements": {
+    "Новичок": {
+      "name": "초보자",
+      "description": "상자 10개 열기"
+    },
+    "Коллекционер": {
+      "name": "수집가",
+      "description": "희귀 아이템 5개 찾기"
+    },
+    "Премиум игрок": {
+      "name": "프리미엄 플레이어",
+      "description": "100+ 루블 가치의 아이템 3개 찾기"
+    },
+    "Подписчик": {
+      "name": "구독자",
+      "description": "30일 연속 활성 구독 보유"
+    },
+    "Покупатель подписки": {
+      "name": "구독 구매자",
+      "description": "모든 구독 티어 구매"
+    },
+    "Удачливый": {
+      "name": "행운아",
+      "description": "7일 연속 상자 열기"
+    },
+    "Миллионер": {
+      "name": "백만장자",
+      "description": "인벤토리 아이템 총 가치 1,000,000 루블"
+    },
+    "Эксперт": {
+      "name": "전문가",
+      "description": "50,000 루블 이상 가치의 아이템 보유"
+    },
+    "Откройте 10 кейсов": {
+      "name": "초보자",
+      "description": "상자 10개 열기"
+    },
+    "Найдите 5 редких предметов": {
+      "name": "수집가",
+      "description": "희귀 아이템 5개 찾기"
+    },
+    "Найдите 3 предмета стоимостью от 100 руб": {
+      "name": "프리미엄 플레이어",
+      "description": "100+ 루블 가치의 아이템 3개 찾기"
+    },
+    "Иметь активную подписку 30 дней подряд": {
+      "name": "구독자",
+      "description": "30일 연속 활성 구독 보유"
+    },
+    "Приобрести любой уровень подписки": {
+      "name": "구독 구매자",
+      "description": "모든 구독 티어 구매"
+    },
+    "Открыть кейс 7 дней подряд": {
+      "name": "행운아",
+      "description": "7일 연속 상자 열기"
+    },
+    "Общая стоимость предметов в инвентаре 1,000,000 руб": {
+      "name": "백만장자",
+      "description": "인벤토리 아이템 총 가치 1,000,000 루블"
+    },
+    "Иметь предмет с ценой выше 50,000 руб": {
+      "name": "전문가",
+      "description": "50,000 루블 이상 가치의 아이템 보유"
+    }
+  },
+  "modals": {
+    "account_linking_error": "계정 연결 중 오류가 발생했습니다.",
+    "achievements_bonus": "업적:",
+    "achievements_collapse_hint": "접으려면 클릭",
+    "achievements_count": "업적",
+    "achievements_expand_hint": "자세히 보려면 클릭",
+    "achievements_not_loaded": "업적이 로드되지 않음",
+    "acquired_date": "획득",
+    "active": "활성",
+    "balance_top_up": "잔액 충전",
+    "best_weapon": "최고의 무기",
+    "buy_subscription": "구독 구매",
+    "cannot_withdraw": "출금할 수 없음",
+    "cards_supported": "지원되는 카드",
+    "case": "상자",
+    "case_label": "상자",
+    "case_opening_error": "상자 열기 오류",
+    "case_per_day": "하루 상자",
+    "case_template_not_found": "상자 템플릿을 찾을 수 없음",
+    "cases_suffix": "상자",
+    "classified": "분류됨",
+    "click_to_connect": "연결하려면 클릭",
+    "click_to_send_code": "코드를 보내려면 클릭",
+    "code_sent": "코드 전송됨",
+    "code_valid_time": "코드 유효 시간",
+    "completing_achievements": "업적 완료",
+    "confirm_password_placeholder": "비밀번호 확인",
+    "connect_steam": "Steam 연결",
+    "connect_steam_first": "먼저 Steam 연결",
+    "consumer": "소비자 등급",
+    "contraband": "밀수품",
+    "covert": "은밀",
+    "creating_payment": "결제 생성 중",
+    "daily_login": "일일 로그인",
+    "day_30": "30일",
+    "deposit_info": "입금 정보",
+    "drop_bonus": "드롭 보너스",
+    "drop_bonus_text": "드롭",
+    "drop_bonuses": "드롭 보너스",
+    "email_verification_label": "이메일 인증",
+    "email_verification_modal": "이메일 인증",
+    "email_verified": "이메일 인증됨",
+    "email_verified_success": "이메일 인증 성공",
+    "email_verify_error": "이메일 인증 오류",
+    "enter_amount": "금액 입력",
+    "enter_code": "코드 입력",
+    "enter_correct_amount": "올바른 금액 입력",
+    "error_no_item_name": "오류: 아이템 이름 없음",
+    "error_no_subscription": "오류: 구독 없음",
+    "error_not_found": "오류: 찾을 수 없음",
+    "error_withdrawal_failed": "오류: 출금 실패",
+    "error_withdrawal_impossible": "오류: 출금 불가능",
+    "event_participation": "이벤트 참여",
+    "example": "예시",
+    "fetch_trade_url_auto": "거래 URL 자동 가져오기",
+    "fetching_trade_url": "거래 URL 가져오는 중",
+    "friend_invites": "친구 초대",
+    "going_to_subscription_payment": "구독 결제로 이동",
+    "industrial": "산업 등급",
+    "invalid_username": "잘못된 사용자명",
+    "inventory_descriptions": "인벤토리 설명",
+    "inventory_empty": "인벤토리 비어있음",
+    "inventory_tabs": "인벤토리 탭",
+    "inventory_title": "인벤토리",
+    "item_info_error": "아이템 정보 오류",
+    "item_withdraw": "아이템 출금",
+    "item_withdraw_success": "아이템 출금 성공",
+    "items_in_inventory": "인벤토리의 아이템",
+    "items_suffix": "아이템",
+    "level_bonus": "레벨 보너스",
+    "level_bonus_tooltip": "레벨 보너스 툴팁",
+    "level_drop_bonus": "레벨 드롭 보너스",
+    "level_max": "100",
+    "level_progress": "레벨 진행도",
+    "level_text": "레벨",
+    "linking_process_error": "연결 과정 오류. 다시 시도해 주세요.",
+    "loading_no": "아니오",
+    "loading_yes": "예",
+    "milspec": "밀스펙 등급",
+    "minimum_amount": "최소 금액",
+    "minimum_deposit_info": "최소 입금 정보",
+    "name": "이름",
+    "need_bonus_game_win": "보너스 게임 승리 필요",
+    "need_trade_url": "거래 URL 필요",
+    "new_password": "새 비밀번호",
+    "new_password_placeholder": "새 비밀번호",
+    "no_description": "설명 없음",
+    "no_duplicates": "중복 없음",
+    "no_items_for_exchange": "교환할 아이템 없음",
+    "no_opened_cases": "열린 상자 없음",
+    "no_sold_items": "판매된 아이템 없음",
+    "no_subscription": "구독 없음",
+    "no_withdrawn_items": "출금된 아이템 없음",
+    "ok": "확인",
+    "open_button": "열기",
+    "open_cases_hint": "상자 열기 힌트",
+    "opened": "열림",
+    "opened_cases": "열린 상자",
+    "opened_cases_hint": "열린 상자 힌트",
+    "opening_cases": "상자 여는 중",
+    "or_enter_custom": "또는 사용자 정의 입력",
+    "password_min_8_chars": "비밀번호 최소 8자",
+    "password_need_digit": "비밀번호에 숫자 필요",
+    "password_need_lowercase": "비밀번호에 소문자 필요",
+    "password_need_special": "비밀번호에 특수문자 필요",
+    "password_need_uppercase": "비밀번호에 대문자 필요",
+    "password_requirements": "비밀번호 요구사항",
+    "payment_error": "결제 오류",
+    "profile_settings_title": "프로필 설정",
+    "provide_trade_url": "거래 URL 제공",
+    "purchase": "구매",
+    "purchase_button": "구매",
+    "resend": "재전송",
+    "resending": "재전송 중",
+    "restricted": "제한됨",
+    "saving": "저장 중",
+    "select_subscription": "구독 선택",
+    "send_code": "코드 전송",
+    "send_code_to": "코드 전송 대상",
+    "send_to_steam": "Steam으로 전송",
+    "sending_code": "코드 전송 중",
+    "session_expired": "세션 만료",
+    "settings_save_error": "설정 저장 오류",
+    "settings_saved": "설정 저장됨",
+    "shop": "상점",
+    "shop_purchases": "상점 구매",
+    "sold": "판매됨",
+    "sold_items_hint": "판매된 아이템 힌트",
+    "source": "소스",
+    "sources": "소스",
+    "status_bonus": "상태:",
+    "status_keyword": "상태",
+    "status_opened": "상태: 열림",
+    "status_pending_withdrawal": "상태: 출금 대기",
+    "status_plus_keyword": "상태+",
+    "status_plus_plus_keyword": "상태++",
+    "status_purchased": "상태: 구매됨",
+    "status_sold": "상태: 판매됨",
+    "status_tier_1": "상태 티어 1",
+    "status_tier_2": "상태 티어 2",
+    "status_tier_3": "상태 티어 3",
+    "status_withdrawn": "상태: 출금됨",
+    "steam_already_linked": "이 Steam 계정은 이미 다른 사용자와 연결되어 있습니다.",
+    "steam_connected": "Steam 연결됨",
+    "steam_link_error": "Steam 계정 연결 오류",
+    "steam_link_try_again": "Steam 계정 연결에 실패했습니다. 다시 시도해 주세요.",
+    "steam_linked_success": "Steam 연결 성공",
+    "steam_not_connected": "Steam 연결되지 않음",
+    "steam_not_connected_error": "Steam 연결되지 않음 오류",
+    "steam_profile_label": "Steam 프로필",
+    "steam_trade_url": "Steam 거래 URL",
+    "step1": "단계 1",
+    "step2": "단계 2",
+    "step3": "단계 3",
+    "step4": "단계 4",
+    "streak_suffix": "연속",
+    "subscription_description": "구독 설명",
+    "subscription_error": "구독 오류",
+    "subscription_status_days": "구독 상태 일수",
+    "subscription_tier_1": "구독 티어 1",
+    "subscription_tier_2": "구독 티어 2",
+    "subscription_tier_3": "구독 티어 3",
+    "subscription_tier_default": "기본 구독",
+    "subscriptions": "구독",
+    "top_up_for": "충전 대상",
+    "total_bonus": "총 보너스:",
+    "total_count": "총계",
+    "trade_url_fetch_error": "거래 URL 가져오기 오류",
+    "trade_url_fetch_network_error": "거래 URL 가져오기 네트워크 오류",
+    "trade_url_fetched": "거래 URL 가져옴",
+    "trade_url_label": "거래 URL",
+    "trade_url_locked": "거래 URL 잠김",
+    "trade_url_manual_instructions": "거래 URL 수동 지침",
+    "trade_url_placeholder": "거래 URL 자리표시자",
+    "trade_url_required": "거래 URL 필요",
+    "trade_url_set": "거래 URL 설정됨",
+    "trade_url_tooltip": "거래 URL 툴팁",
+    "unknown_achievement": "알 수 없는 업적",
+    "user_not_found": "사용자를 찾을 수 없음",
+    "username_description": "사용자명 설명",
+    "verification_code_error": "인증 코드 오류",
+    "verification_code_sent": "인증 코드 전송됨",
+    "verify": "인증",
+    "verify_email_button": "이메일 인증",
+    "verifying": "인증 중",
+    "withdraw_to_steam": "Steam으로 출금",
+    "withdrawing": "출금 중",
+    "withdrawn": "출금됨",
+    "withdrawn_items_hint": "출금된 아이템 힌트",
+    "xp_earned_for": "XP 획득"
   }
 }
